docs: fix alignments

--- a/packages/react/src/dropdown/src/styles/index.module.scss
+++ b/packages/react/src/dropdown/src/styles/index.module.scss
@@ -3,7 +3,7 @@
 
 @include theme.scope($dropdown-root) {
   position: absolute;
-  min-width: 220px;
+  min-width: 180px;
   padding: theme.get-spacing("sm");
   background-color: theme.get-color("background-elevated");
   border: 1px solid theme.get-color("neutral", "300");
